[package]
name = "linux-gpib-rs"
version = "0.1.1"
authors = ["Julien Salort <julien.salort@ens-lyon.fr>"]
edition = "2024"
license-file = "LICENSE.txt"
description = "Low-level wrapper for Linux GPIB"
repository = "https://github.com/jsalort/linux-gpib-rs"
homepage = "https://github.com/jsalort/linux-gpib-rs"
readme = "README.md"
keywords = ["control", "gpib", "instrument"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
features = ["async-tokio"]
no-default-features = true

[features]
default = ["bindgen", "async-tokio"]
async-tokio = ["dep:tokio"]
bindgen = ["linux-gpib-sys/bindgen"]

[dependencies]
linux-gpib-sys = { version = "^0.1.2", default-features = false }
tokio = { version = "1", features = ["full"], optional = true }

[lib]
crate-type = ["lib", "cdylib"]
