[package]
name = "linux-gpib-rs"
version = "0.2.4"
authors = ["Julien Salort <julien.salort@ens-lyon.fr>"]
edition = "2024"
license-file = "LICENSE.txt"
description = "Low-level wrapper for Linux GPIB"
repository = "https://github.com/jsalort/linux-gpib-rs"
homepage = "https://github.com/jsalort/linux-gpib-rs"
readme = "README.md"
keywords = ["control", "gpib", "instrument"]
categories = ["api-bindings"]

[features]
default = ["async-tokio", "linuxgpib"]
build-binary = ["async-tokio"]
async-tokio = ["dep:tokio"]
linuxgpib = ["linux-gpib-sys/linuxgpib"]
nigpib = ["linux-gpib-sys/nigpib"]

[dependencies]
linux-gpib-sys = { version = "0.1.4", default-features = false }
tokio = { version = "1", features = ["full"], optional = true }
log = "0.4"
env_logger = "0.11"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "scan_gpib"
path = "src/cli.rs"
